; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_ranges.c_rangelist_remove_all.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_ranges.c_rangelist_remove_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RangeList = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rangelist_remove_all(%struct.RangeList* %0) #0 {
  %2 = alloca %struct.RangeList*, align 8
  store %struct.RangeList* %0, %struct.RangeList** %2, align 8
  %3 = load %struct.RangeList*, %struct.RangeList** %2, align 8
  %4 = getelementptr inbounds %struct.RangeList, %struct.RangeList* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @free(i32 %5)
  %7 = load %struct.RangeList*, %struct.RangeList** %2, align 8
  %8 = getelementptr inbounds %struct.RangeList, %struct.RangeList* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @free(i32 %9)
  %11 = load %struct.RangeList*, %struct.RangeList** %2, align 8
  %12 = call i32 @memset(%struct.RangeList* %11, i32 0, i32 8)
  ret void
}

declare dso_local i32 @free(i32) #1

declare dso_local i32 @memset(%struct.RangeList*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
